--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -32,7 +32,7 @@
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z" />
                   </svg>
                 </div>
-                <span class="text-lg font-light text-white group-hover:text-[#0A7AFF] transition-colors">IgSpy</span>
+                <span class="text-lg font-light text-white group-hover:text-[#0A7AFF] transition-colors">ViralSpy</span>
               <% end %>
             </div>
             
